--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 #  docker-compose -f docker-compose.yml config check validate config
-version: "3.7"
+version: "3.2"
 services:
   portainer:
     image: "portainer/portainer:latest"
@@ -13,22 +13,8 @@ services:
       - portainer_data:/data
     labels:
       com.docker.compose.project: "portainer"
-    deploy:
-      mode: replicated
-      replicas: 1
-      placement:
-        constraints:
-          - node.labels.interconnect == si
-      restart_policy:
-        condition: on-failure
-        max_attempts: 3
-        window: 120s
-    environment:
-      VIRTUAL_HOST: "portainer.local.com"
-      VIRTUAL_PORT: "8101:8101"
-      DHPARAM_GENERATION: "true"
     networks:
-      - rproxy
+      - reverse_proxy
       - agent_network_dtics
 
 volumes:
