--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     expose:
       - "9000"
     volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
       - portainer_data:/data
     labels:
       com.docker.compose.project: "portainer"
